<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    tools:context="com.example.pharmasentinal.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="181dp"
        android:layout_height="181dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txtPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterName"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/txtEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:layout_below="@id/txtPasswordReg"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnRegisterHere"
        android:layout_width="210sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/description"
        android:layout_below="@id/txtEmailReg"
        android:text="@string/register_here"
        />

    <Button
        android:id="@+id/btnbackreg"
        android:layout_width="210sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/description"
        android:layout_below="@id/btnRegisterHere"
        android:text="@string/back"
        />


</RelativeLayout>



