<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/delete_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/deletemeden"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="50sp" />
    <EditText
        android:id="@+id/delete_med_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70sp"
        android:layout_below="@id/delete_med"
        android:ems="12"
        android:hint="@string/meden"
        android:textStyle="bold"
        android:inputType="text"
        />

    <Button
        android:id="@+id/btnDelMed"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@id/delete_med_en"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"
        android:text="@string/btndeletemed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</RelativeLayout>